--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         window.somma = somma;
         window.divisione = divisione;
 
-    //    console.log(somma(5,5))
+        //    console.log(somma(5,5))
 
-    import {listAvengers} from "./js/modulo-api.js";
+        //   import {listAvengers} from "./js/modulo-api.js";
+        import { listAvengersSeries } from "./js/modulo-api.js";
 
-    console.log("Inizio esecuzione...");
-    listAvengers();
-    console.log("Fine esecuzione...")
+        console.log("Inizio esecuzione...");
+        // listAvengers();
+        listAvengersSeries();
+        console.log("Fine esecuzione...");
 
     </script>
 
