correzione riga 36 index

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         console.log("Inizio esecuzione...");
         //listAvengers();
         //listAvengersSeries();
-        apiList("avengers","series")
+        apiList("avengers","series");
+        apiList("avengers",CONTENT_TYPE.MOVIE);
         console.log("Fine esecuzione...");
 
     </script>
