map - cicla array con proprietà

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         //listAvengers();
         //listAvengersSeries();
         apiList("avengers","series");
-        apiList("avengers",CONTENT_TYPE.MOVIE);
+        apiList("terminator",CONTENT_TYPE.MOVIE);
         console.log("Fine esecuzione...");
 
     </script>
