--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         </a>
         <div class="bx menu" id="menu-icon"></div>
 
-
         <!-- Menu -->
         <ul class="navbar">
             <li><a href="#home" class="home-active">Home</a></li>
@@ -84,7 +83,7 @@
 
             <div class="box">
             <div class="box-img">
-                <img src="img/m1.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="Dunkirk">
             </div>
             <h3>Dunkirk</h3>
             <span>120 min | Avventura</span>
@@ -92,7 +91,7 @@
 
        <div class="box">
             <div class="box-img">
-                <img src="img/m2.jpg" alt="">
+            <img src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="Venom: La furia di Carnage">
             </div>
             <h3>Venom</h3>
             <span>120 min | Azione</span>
@@ -171,6 +170,11 @@
 
 </body>
 
-
+<!-- Footer -->
+<footer>
+<div class="copyright">
+    <p>MovieApp © Tutti i diritti riservati</p>
+</div>
+</footer>
 
 </html>
