--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo">
             <i class='bx bxs-movie'></i> MovieApp
         </a>
-        <div class="bx menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"></div>
 
         <!-- Menu -->
         <ul class="navbar">
