Div dei Film Creati con API (ancora buggato)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <li><a href="#serietv">Serie TV</a></li>
             <li><a href="#Comingsoon">Coming Soon</a></li>
         </ul>
-        <a href="#" class="btn">Accedi</a>
+        <!--  <a href="#" class="btn">Accedi</a> -->
+        <form id="form">
+            <input type="text" placeholder="Cerca..." id="search" class="search">
+        </form>
 
     </header>
 
@@ -76,11 +79,53 @@
 
     </section>
 
-    <!-- Film Aggiunti di recente -->
-    <section class="movies" id="film">
-        <h2 class="heading">Film aggiunti di recente</h2>
-        <div class="movies-container">
+    <h2 class="tipologia">Film</h2>
 
+    <!-- Film -->
+    <div id="main">
+
+        <div class="movie">
+            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="Dunkirk">
+
+            <div class="movie-info">
+                <h3>Dunkirk</h3>
+                <span>120 min | Avventura</span>
+            </div>
+
+            <div class="riassunto">
+                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
+            </div>
+        </div>
+
+        <div class="movie">
+            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="Dunkirk">
+
+            <div class="movie-info">
+                <h3>Dunkirk</h3>
+                <span>120 min | Avventura</span>
+            </div>
+
+            <div class="riassunto">
+                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
+            </div>
+        </div>
+
+        <div class="movie">
+            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="Dunkirk">
+
+            <div class="movie-info">
+                <h3>Dunkirk</h3>
+                <span>120 min | Avventura</span>
+            </div>
+
+            <div class="riassunto">
+                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
+            </div>
+        </div>
+        <!--
             <div class="box">
             <div class="box-img">
                 <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="Dunkirk">
@@ -159,9 +204,11 @@
             </div>
             <h3>Underworld Bloodwars</h3>
             <span>120 min | Thriller</span>
-        </div>
-       
-    </section>
+            </div>
+            
+        </div> -->
+
+    </div>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
@@ -172,9 +219,9 @@
 
 <!-- Footer -->
 <footer>
-<div class="copyright">
-    <p>MovieApp © Tutti i diritti riservati</p>
-</div>
+    <div class="copyright">
+        <p>MovieApp © Tutti i diritti riservati</p>
+    </div>
 </footer>
 
 </html>
