--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- https://ggregman.github.io/movieapp/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +26,6 @@
             <li><a href="#home" class="home-active">Home</a></li>
             <li><a href="#film">Film</a></li>
             <li><a href="#serietv">Serie TV</a></li>
-            <li><a href="#Comingsoon">Coming Soon</a></li>
         </ul>
         <!--  <a href="#" class="btn">Accedi</a> -->
         <form id="form">
@@ -79,141 +79,324 @@
 
     </section>
 
+
+    <section id="film"></section>
     <h2 class="tipologia">Film</h2>
 
     <!-- Film -->
-    <div id="main">
 
-        <div class="movie">
-            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
-                alt="Dunkirk">
 
-            <div class="movie-info">
-                <h3>Dunkirk</h3>
-                <span>120 min | Avventura</span>
+
+    <div id="container">
+
+        <div id="movie1">
+
+            <div>
+                <img id="img1"
+                    src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                    alt="">
             </div>
 
-            <div class="riassunto">
-                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
-            </div>
-        </div>
-
-        <div class="movie">
-            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
-                alt="Dunkirk">
-
-            <div class="movie-info">
-                <h3>Dunkirk</h3>
-                <span>120 min | Avventura</span>
+            <div id="movie-info1">
+                <h3>Titolo</h3>
             </div>
 
-            <div class="riassunto">
-                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
+            <div id="movie-riassunto1">
+                <p>Trama</p>
             </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie2">
+            <img id="img2"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="movie">
-            <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
-                alt="Dunkirk">
-
-            <div class="movie-info">
-                <h3>Dunkirk</h3>
-                <span>120 min | Avventura</span>
+            <div id="movie-info2">
+                <h3>Titolo</h3>
             </div>
 
-            <div class="riassunto">
-                <p>Trama: Asdfghjklqwertyuiopzxcvbnm poiuytrewqlkjhgfdsa mnbvcxz</p>
+            <div id="movie-riassunto2">
+                <p>Trama</p>
             </div>
         </div>
-        <!--
-            <div class="box">
-            <div class="box-img">
-                <img src="https://m.media-amazon.com/images/M/MV5BN2YyZjQ0NTEtNzU5MS00NGZkLTg0MTEtYzJmMWY3MWRhZjM2XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="Dunkirk">
+        <!-------------------------------------------------------------------------->
+        <div id="movie3">
+            <img id="img3"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
+
+            <div id="movie-info3">
+                <h3>Titolo</h3>
             </div>
-            <h3>Dunkirk</h3>
-            <span>120 min | Avventura</span>
+
+            <div id="movie-riassunto3">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie4">
+            <img id="img4"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-       <div class="box">
-            <div class="box-img">
-            <img src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg" alt="Venom: La furia di Carnage">
+            <div id="movie-info4">
+                <h3>Titolo</h3>
             </div>
-            <h3>Venom</h3>
-            <span>120 min | Azione</span>
+
+            <div id="movie-riassunto4">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie5">
+            <img id="img5"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m3.jpg" alt="">
+            <div id="movie-info5">
+                <h3>Titolo</h3>
             </div>
-            <h3>Batman VS Superman</h3>
-            <span>120 min | Thriller</span>
+
+            <div id="movie-riassunto5">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie6">
+            <img id="img6"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m4.jpg" alt="">
+            <div id="movie-info6">
+                <h3>Titolo</h3>
             </div>
-            <h3>John Wick 2</h3>
-            <span>120 min | Azione</span>
+
+            <div id="movie-riassunto6">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie7">
+            <img id="img7"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m5.jpg" alt="">
+            <div id="movie-info7">
+                <h3>Titolo</h3>
             </div>
-            <h3>Aquaman</h3>
-            <span>120 min | Azione</span>
+
+            <div id="movie-riassunto7">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie8">
+            <img id="img8"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m6.jpg" alt="">
+            <div id="movie-info8">
+                <h3>Titolo</h3>
             </div>
-            <h3>Black Panther</h3>
-            <span>120 min | Thriller</span>
+
+            <div id="movie-riassunto8">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie9">
+            <img id="img9"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m7.jpg" alt="">
+            <div id="movie-info9">
+                <h3>Titolo</h3>
             </div>
-            <h3>Thor</h3>
-            <span>120 min | Avvemtura</span>
+
+            <div id="movie-riassunto9">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        <div id="movie10">
+            <img id="img10"
+                src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                alt="">
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m8.jpg" alt="">
+            <div id="movie-info10">
+                <h3>Titolo</h3>
             </div>
-            <h3>Bumblebee</h3>
-            <span>120 min | Thriller</span>
+
+            <div id="movie-riassunto10">
+                <p>Trama</p>
+            </div>
         </div>
+        <!-------------------------------------------------------------------------->
+        </section>
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m9.jpg" alt="">
+        <section id="serie">
+            <h2 class="tipologia">Serie TV</h2>
+
+            <div id="container">
+
+                <div id="serie1">
+                    <img id="imgs1"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info1">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto1">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie2">
+                    <img id="imgs2"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info2">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto2">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie3">
+                    <img id="imgs3"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info3">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto3">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie4">
+                    <img id="imgs4"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info4">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto4">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie5">
+                    <img id="imgs5"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info5">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto5">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie6">
+                    <img id="imgs6"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info6">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto6">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie7">
+                    <img id="imgs7"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info7">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto7">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie8">
+                    <img id="imgs8"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info8">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto8">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie9">
+                    <img id="imgs9"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info9">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto9">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+                <div id="serie10">
+                    <img id="imgs10"
+                        src="https://m.media-amazon.com/images/M/MV5BYTc3ZTAwYTgtMmM4ZS00MDRiLWI2Y2EtYmRiZmE0YjkzMGY1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_SX300.jpg"
+                        alt="">
+
+                    <div id="serie-info10">
+                        <h3>Titolo</h3>
+                    </div>
+
+                    <div id="serie-riassunto10">
+                        <p>Trama</p>
+                    </div>
+                </div>
+                <!-------------------------------------------------------------------------->
+
+
             </div>
-            <h3>Mortal Engines</h3>
-            <span>120 min | Action</span>
         </div>
+        </section>
 
-        <div class="box">
-            <div class="box-img">
-                <img src="img/m10.jpg" alt="">
-            </div>
-            <h3>Underworld Bloodwars</h3>
-            <span>120 min | Thriller</span>
-            </div>
-            
-        </div> -->
-
-    </div>
+    
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module">
+        import { getMovies,getSeries } from "./main.js";
+        import { CONTENT_TYPE } from "./main.js";
 
+        getMovies("Marvel", CONTENT_TYPE.MOVIE);
+        getSeries("Marvel",CONTENT_TYPE.SERIES);
 
+    </script>
 
 </body>
 
