--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <!-------------------------------------------------------------------------->
         </section>
 
-        <section id="serie">
+        <section id="serietv">
             <h2 class="tipologia">Serie TV</h2>
 
             <div id="container">
